--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,4 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Sora:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap');
