--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,198 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap');
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  box-sizing: border-box;
+}
+
+.nav-bar {
+  position: absolute;
+  left: 24px;
+  top: 31px;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  width: 60px;
+  height: 60px;
+  padding: 10px;
+  border: none;
+  border-radius: 50%;
+  background: #4456fb;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 800;
+  font-size: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+  margin-top: 100px;
+  font-size: 48px;
+  color: #fff;
+  font-weight: 700;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.heading {
+  margin-left: 25px;
+  margin-top: 36px;
+  font-family: 'Sora', sans-serif;
+  font-weight: 700;
+  font-size: 28px;
+  color: #4f5461;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.project-title {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  color: #fff;
+  margin-left: 25px;
+  padding-top: 22px;
+}
+
+.sample {
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 98.35%);
+  border-radius: 10px;
+}
+
+.tech-stack {
+  position: absolute;
+  left: 25px;
+  top: 250px;
+  right: 0;
+  bottom: 0;
+  width: auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.tech-btn {
+  width: 91px;
+  height: 30px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  background: #4f5461;
+  color: #e6e9f0;
+  border: none;
+  border-radius: 24px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.see-project {
+  position: absolute;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  color: #fff;
+  width: auto;
+  left: 25px;
+  top: 300px;
+  margin-left: 50px;
+  padding: 10px;
+  border: none;
+  border-radius: 60px;
+  background: #4456fb;
+  text-align: center;
+}
+
+.contact-title {
+  padding: 24px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 28px;
+  font-weight: 700;
+  color: #4f5461;
+}
+
+.contact-msg {
+  padding: 24px;
+  width: 80%;
+}
+
+@media (min-width: 768px) {
+  .nav-bar {
+    position: fixed;
+    left: 71px;
+    top: 200px;
+    bottom: 0;
+    gap: 20px;
+    width: 71px;
+    height: 100vw;
+    flex-direction: column;
+    justify-content: flex-start;
   }
 
-  to {
-    transform: rotate(360deg);
+  .logo {
+    position: fixed;
+    top: 47px;
+    left: 80px;
+    font-family: 'roboto', sans-serif;
+  }
+
+  .heading {
+    margin-top: 25px;
+    margin-left: 246px;
+    margin-bottom: 40px;
+    padding-left: 40px;
+  }
+
+  .sample {
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 98.35%);
+    border-radius: 10px;
+  }
+
+  .tech-stack {
+    position: absolute;
+    left: 25px;
+    top: 68px;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .tech-btn {
+    margin-left: 0;
+    margin-top: 0;
+  }
+
+  .see-project {
+    position: absolute;
+    left: 20px;
+    top: 158px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 0.9rem;
+    color: #fff;
+    width: auto;
+    padding: 10px;
+    margin-left: 0;
+    border: none;
+    border-radius: 24px;
+    background: #4456fb;
+    text-align: center;
+  }
+
+  .contact-title {
+    margin-left: 250px;
+    padding-left: 50px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 28px;
+    font-weight: 800;
+    color: #4f5461;
+  }
+
+  .contact-msg {
+    margin-left: 250px;
+    padding-left: 50px;
+    width: 50%;
+    font-family: 'Poppins', sans-serif;
+    color: #737986;
+    font-size: 16px;
+    font-weight: 400;
   }
 }
