--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -100,10 +100,6 @@ body {
 @media (min-width: 768px) {
   .contact-container {
     position: relative;
-
-    /* display: block; */
-
-    /* width: 100%; */
     top: 0;
     left: 0;
     right: 0;
@@ -111,12 +107,10 @@ body {
   }
 
   .contact-content {
-    margin: 0 0 0 517px;
+    margin: 0 0 0 36.90vw;
   }
 
   .contact-title {
-    /* margin-left: 250px;
-    padding-left: 50px; */
     font-family: 'Roboto', sans-serif;
     font-size: 28px;
     font-weight: 800;
@@ -124,8 +118,6 @@ body {
   }
 
   .contact-text {
-    /* margin-left: 250px;
-    padding-left: 50px; */
     font-family: 'Poppins', sans-serif;
     color: #737986;
     font-size: 16px;
@@ -151,20 +143,11 @@ body {
   .form-items {
     display: flex;
     flex-direction: column;
-
-    /* justify-content: center;  */
-
-    /* align-items: flex-start;
-    margin: 0px 0px 0px -301px; */
   }
 
   .contact-inputs {
     display: flex;
     flex-direction: row;
-
-    /* justify-content: center; */
-
-    /* align-items: center; */
     gap: 17px;
   }
 
