--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -85,8 +85,7 @@ body {
     top: 0;
     right: 0;
     height: 100vh;
-    margin: 0;
-    padding: 90px 30px 36px 120px;
+    padding: 0 0 0 14.72vw;
     background: url('/src/resources/header-shape.svg');
     background-repeat: no-repeat;
     background-size: auto;
@@ -100,8 +99,10 @@ body {
   }
 
   .author-name {
-    width: 721px;
-    height: 100px;
+    margin-top: 11.18vw;
+
+    /* width: 721px;
+    height: 100px; */
     color: #fff;
     font-size: 88px;
     font-style: normal;
