--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -15,13 +15,13 @@ Modal view
 }
 
 .modal-content {
-  position: static;
+  position: relative;
   margin: 5% auto;
   width: 90%;
   height: auto;
   border: 3px solid #fff;
   border-radius: 30px;
-  z-index: 1;
+  z-index: 10;
   background: #fff;
   box-shadow: 0 4px 10px rgba(157, 154, 154, 0.902);
 }
@@ -31,7 +31,6 @@ Modal view
   flex-direction: column;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 98.35%);
   border-radius: 30px;
-  z-index: 10;
 }
 
 .modal-links {
@@ -61,6 +60,7 @@ Modal view
 }
 
 .modal-screenshot {
+  padding: 12px;
   z-index: -1;
 }
 
