Implement updates in  contact and about components

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -91,6 +91,10 @@ body {
   color: #fff;
 }
 
+.get-in-touch-btn:hover {
+  background: #6877ff;
+}
+
 .contact-details {
   display: flex;
   flex-direction: column;
